--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18",
+    "nodemailer": "^6.5.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.7",
     "request": "^2.88.2"
   }
