--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^1.25.1",
     "config": "^3.3.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "fs": "0.0.1-security",
