--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.6",
     "cloudinary": "^1.25.1",
     "config": "^3.3.4",
     "cookie-session": "^1.4.0",
@@ -31,6 +32,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "passport-oauth2": "^1.5.0",
+    "puppeteer": "^9.0.0",
     "request": "^2.88.2",
     "socket.io": "^4.0.1"
   }
