--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gravatar": "^1.8.1",
     "iplocation": "^7.2.0",
     "jsonwebtoken": "^8.5.1",
+    "linkedin-profile-scraper": "^2.3.1",
     "mongoose": "^5.11.18",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
