--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-oauth2": "^1.5.0",
     "puppeteer": "^9.0.0",
     "request": "^2.88.2",
-    "socket.io": "^4.0.1"
+    "socket.io": "^4.0.1",
+    "text-censor": "^1.0.2"
   }
 }
