--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "linkedin-profile-scraper": "^2.3.1",
     "mongoose": "^5.11.18",
     "multer": "^1.4.2",
+    "node-schedule": "^2.0.0",
     "nodemailer": "^6.5.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.7",
