--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.10.0",
     "fs": "0.0.1-security",
     "geoip-lite": "^1.4.2",
+    "google-news-scraper": "^1.0.6",
     "gravatar": "^1.8.1",
     "iplocation": "^7.2.0",
     "jsonwebtoken": "^8.5.1",
