--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-oauth2": "^1.5.0",
     "puppeteer": "^9.0.0",
+    "react-progress-meter": "^1.3.3",
     "request": "^2.88.2",
     "socket.io": "^4.0.1",
     "text-censor": "^1.0.2",
